--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -153,6 +154,11 @@ footer {
 .footer ul {
   list-style: none;
   color: rgb(234, 226, 226);
+  cursor: pointer;
+}
+
+.footer li{
+  margin-bottom: 5px;
 }
 
 .footer div {
@@ -187,5 +193,6 @@ footer {
 
 .btn:hover{
   background-color: #c6c4c3;
-  font-size: 25px;
+  font-size: 21px;
 }
+
