--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #f4f4f4;
+  background-image: linear-gradient(to right, #f6f8fc, #d9e2ec);
   font-family: Poppins, sans-serif;
 }
 
